--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,6 @@
 {
-  "arrowParens": "always",
-  "printWidth": 100,
-  "trailingComma": "all"
+    "arrowParens": "always",
+    "printWidth": 100,
+    "tabWidth": 4,
+    "trailingComma": "all"
 }
