--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,10 +1,12 @@
 {
-  "extends": [
-    "stylelint-config-sass-guidelines",
-    "stylelint-config-recess-order",
-    "stylelint-config-prettier"
-  ],
-  "rules": {
-    "order/properties-alphabetical-order": null
-  }
+    "extends": [
+        "stylelint-config-sass-guidelines",
+        "stylelint-config-recess-order",
+        "stylelint-config-prettier"
+    ],
+    "plugins": ["stylelint-prettier"],
+    "rules": {
+        "order/properties-alphabetical-order": null,
+        "prettier/prettier": true
+    }
 }
