--- a/package.json
+++ b/package.json
@@ -1,48 +1,49 @@
 {
-  "name": "bemake",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "license": "Apache-2.0",
-  "scripts": {
-    "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
-    "preview": "vite preview",
-    "lint": "eslint --ignore-path .gitignore **/*.{ts,tsx} && stylelint --ignore-path .gitignore **/*.css",
-    "format": "prettier --ignore-path .gitignore **/*.{ts,tsx}",
-    "tauri": "tauri"
-  },
-  "dependencies": {
-    "@babel/core": "^7",
-    "@chakra-ui/react": "^2.4.6",
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
-    "@tauri-apps/api": "^1.2.0",
-    "framer-motion": "^8.0.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "vue": "^3.2.45"
-  },
-  "devDependencies": {
-    "@tauri-apps/cli": "^1.2.2",
-    "@types/node": "^18.7.10",
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.10",
-    "@typescript-eslint/eslint-plugin": "^5.47.1",
-    "@typescript-eslint/parser": "^5.47.1",
-    "@vitejs/plugin-react": "^3.0.0",
-    "eslint": "^8.30.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-chakra-ui": "^0.7.6",
-    "postcss": "^8.4.20",
-    "prettier": "^2.8.1",
-    "stylelint": "^14.16.1",
-    "stylelint-config-prettier": "^9.0.4",
-    "stylelint-config-recess-order": "^3.1.0",
-    "stylelint-config-sass-guidelines": "^9.0.1",
-    "typescript": "^4.6.4",
-    "vite": "^4.0.0",
-    "vite-plugin-eslint": "^1.8.1",
-    "vue-tsc": "^1.0.11"
-  }
+    "name": "bemake",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "license": "Apache-2.0",
+    "scripts": {
+        "dev": "vite",
+        "build": "vue-tsc --noEmit && vite build",
+        "preview": "vite preview",
+        "lint": "eslint --ignore-path .gitignore **/*.{ts,tsx} && stylelint --ignore-path .gitignore **/*.css",
+        "format": "prettier --ignore-path .gitignore **/*.{ts,tsx}",
+        "tauri": "tauri"
+    },
+    "dependencies": {
+        "@babel/core": "^7",
+        "@chakra-ui/react": "^2.4.6",
+        "@emotion/react": "^11.10.5",
+        "@emotion/styled": "^11.10.5",
+        "@tauri-apps/api": "^1.2.0",
+        "framer-motion": "^8.0.2",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "vue": "^3.2.45"
+    },
+    "devDependencies": {
+        "@tauri-apps/cli": "^1.2.2",
+        "@types/node": "^18.7.10",
+        "@types/react": "^18.0.26",
+        "@types/react-dom": "^18.0.10",
+        "@typescript-eslint/eslint-plugin": "^5.47.1",
+        "@typescript-eslint/parser": "^5.47.1",
+        "@vitejs/plugin-react": "^3.0.0",
+        "eslint": "^8.30.0",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-chakra-ui": "^0.7.6",
+        "postcss": "^8.4.20",
+        "prettier": "^2.8.1",
+        "stylelint": "^14.16.1",
+        "stylelint-config-prettier": "^9.0.4",
+        "stylelint-config-recess-order": "^3.1.0",
+        "stylelint-config-sass-guidelines": "^9.0.1",
+        "stylelint-prettier": "^2.0.0",
+        "typescript": "^4.6.4",
+        "vite": "^4.0.0",
+        "vite-plugin-eslint": "^1.8.1",
+        "vue-tsc": "^1.0.11"
+    }
 }
