--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@emotion/styled": "^11.10.5",
         "@tauri-apps/api": "^1.2.0",
         "framer-motion": "^8.0.2",
+        "immer": "^9.0.16",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "vue": "^3.2.45"
